fix: header margin on small screen

--- a/php/src/public/css/home-lowongan.css
+++ b/php/src/public/css/home-lowongan.css
@@ -497,7 +497,6 @@ a {
   min-height: 14px;
 }
 
-/* Media Queries */
 @media (max-width: 1200px) {
   .header {
     flex-wrap: wrap;
@@ -510,6 +509,7 @@ a {
 
 @media (max-width: 768px) {
   .header {
+    margin-top: 100px;
     padding-top: 20px;
     flex-direction: column;
     align-items: center;
